<resources>
    <string name="app_name">tarea1</string>
    <string name="action_settings">Settings</string>
    <string name="txagenda">Agenda Telefonica</string>
    <string name="bt_NewContact">NUEVO CONTACTO</string>
    <string name="NombreApellido">Nombre y Apellido</string>
    <string name="EMail">Correo Electronico</string>
    <string name="Edad">Edad</string>
    <string name="Celular">Celular</string>
    <string name="Telefono">Telefono</string>
    <string name="bt_guardar">GUARDAR</string>
    <string name="mDatos">Datos Ingresados</string>
    <string name="Grupos">Grupos</string>
    <string name="bt_eliminar">ELIMINAR</string>
    <string name="bt_limpiar">LIMPIAR</string>
    <string name="bt_editar">EDITAR</string>
    <string name="procesando">Procesando datos..</string>
    <string name="prueba">prueba nombre</string>
</resources>
